# Navi

./: .gitignore  Makefile  README.md
.github/workflows/: build-test-release.yml
app/: libnavi_engine.h
app/lib/: main.dart
app_templates/: main.dart  pubspec.yaml
docs/: Blueprint-v0.1  MVP-v0.1.md  design.md
engine/: go.mod
engine/ffi/: ffi.go
engine/rag/: simple.go
engine/repo/: sqlite_repo.go
flows/: rag_email.yaml
rust/pgshim/: Cargo.toml
rust/pgshim/src/: main.rs
schemas/: event_envelope.json
scripts/: build_go.sh  init_db_sqlite.py
