[package]
name = "pgshim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
pgwire = "0.21.0"
bytes = "1"
rusqlite = { version = "0.31", features = ["bundled","serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
